# tg-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/api/: health.py  webhook.py
app/domain/: __init__.py  commands.py  errors.py  interfaces.py  models.py  services.py
app/providers/: __init__.py  base.py  openai_provider.py  vertex_image_models.py  vertex_image_provider.py  vertex_video_provider.py
app/storage/: __init__.py  conversations.py  db.py  generated_images.py  generation_jobs.py  messages.py
app/telegram/: __init__.py  drafts.py  formatting.py  handlers.py  media.py  normalizer.py  polling.py
app/workers/: video_jobs.py
docs/: architecture.md  flows.md  implementation-plan.md  phase-1-5-draft-streaming.md  phase-2-vertex-image-generation.md  phase-3-vertex-video-generation.md  roadmap.md
tests/: conftest.py  test_app.py  test_chat_service.py  test_config.py  test_normalizer.py  test_openai_provider.py  test_telegram_formatting.py  test_vertex_image_provider.py  test_vertex_video_provider.py  test_video_job_worker.py  test_webhook.py
